<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_margin="25dp"
    android:gravity="center"
    android:orientation="vertical">

    <!-- scrolling bottom pane -->
    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:layout_weight="1">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="New to meditation?"
                android:textSize="20sp"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:text="Follow our simple 10-day course to get started."
                android:textSize="15sp"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="For each of the first three days, we will introduce a new component of meditation and practice exercise, building up to your first sitting on Day Four. We\'ll have a brief check-in on Day Six, to help guide you through difficulties with longer meditation sessions. By the time you\'re done on Day 10, you\'ll have completed a 15-minute session on your own!"
                android:textSize="15sp" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text='We recommend you follow the lessons in sequence, but feel free to repeat a lesson until you feel comfortable. There is no "right" pace.'
                android:textSize="15sp" />

            <Button
                android:id="@+id/btn_lesson1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:text="@string/day1_title" />

            <Button
                android:id="@+id/btn_lesson2"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:text="@string/day2_title" />

            <Button
                android:id="@+id/btn_lesson3"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/day3_title" />

            <Button
                android:id="@+id/btn_lesson4"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:text="@string/day4_title" />

            <Button
                android:id="@+id/btn_lesson5"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:text="@string/day5_title" />

            <Button
                android:id="@+id/btn_lesson6"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:text="@string/day6_title" />

            <Button
                android:id="@+id/btn_lesson7"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:text="@string/day7_title" />

            <Button
                android:id="@+id/btn_lesson8"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:text="@string/day8_title" />

            <Button
                android:id="@+id/btn_lesson9"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:text="@string/day9_title" />

            <Button
                android:id="@+id/btn_lesson10"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:text="@string/day10_title" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:textSize="12sp"
                android:textStyle="italic"
                android:text="Adapted from the work of Christopher K. Germer, Ph.D." />


        </LinearLayout>

    </ScrollView>

</LinearLayout>